--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -1,3 +1,28 @@
 IonContent IonToolbar {
   --background: translucent;
 }
+
+.fileUpload {
+  position: relative;
+  overflow: hidden;
+  width: 500px;
+  background-color: #428cff;
+  padding: 7px;
+  border-radius: 10px;
+}
+
+.fileUpload input.upload {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 0;
+  padding: 0;
+  font-size: 20px;
+  cursor: pointer;
+  opacity: 0;
+  filter: alpha(opacity=0);
+}
+
+.last-image {
+  border: 1px red solid;
+}
